cmake_minimum_required(VERSION 3.20)
project(TareaExtraclase1)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(TareaExtraclase1
        .idea/modules.xml
        .idea/TareaExtraclase1.iml
        .idea/vcs.xml
        .idea/workspace.xml
        main.cpp
        main.h
        README.md)
